<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.mon1ernightlife.Login"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bckgrnd_login"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        <TextView

            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:textColor="@color/colorBlack"
            tools:ignore="TextViewEdits" />
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_email"
            android:textColorHint="@color/colorBlack"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bkgnd_white_box"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/colorBlack"/>
        <TextView

            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:textColor="@color/colorBlack"/>
        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_password"
            android:textColorHint="@color/colorBlack"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bkgnd_white_box"
            android:inputType="textPassword"
            android:textColor="@color/colorBlack"/>
              />

    </LinearLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:onClick="forgotPassword"
        android:clickable="true"
        android:textColor="@color/colorRed"
        android:textSize="15sp"
        />

<Button
    android:id="@+id/buttonSignIn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="@string/sign_in"
    android:textColor="@color/colorBlack"
    android:background="@drawable/edit_bckgrnd_login"
    android:layout_marginTop="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
    <View
        android:id="@+id/view1"
        android:layout_width="160dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorBlack" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/view1"
        android:text=" Or "
        android:textSize="15dp"
        android:textColor="@color/colorBlack"/>

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/tv1"
        android:background="@color/colorBlack" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/not_a_partner"
        android:textColor="@color/colorBlack"/>
    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/signUp"
        android:textColor="@color/colorBlack"
        android:background="@drawable/edit_bckgrnd_login"
        android:layout_marginTop="15dp"/>

</LinearLayout>
