<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorSilver"
    android:orientation="vertical"
    tools:context="com.example.admin.mon1ernightlife.Welcome">
<ImageView
    android:id="@+id/imageViewSmileyFace"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:background="@drawable/smiley_face"
    android:contentDescription="@string/smiley_face"/>
    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="@color/colorBlack"/>
    <TextView
        android:id="@+id/textViewReceiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:textColor="@color/colorBlack"
        />
    <TextView
        android:id="@+id/welcome_message2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/welcome2"
        android:textColor="@color/colorBlack"/>
    <Button
        android:id="@+id/buttonNextPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/next"
        android:background="@drawable/edit_bckgrnd_login"
        android:textColor="@color/colorBlack"
        />
</LinearLayout>
