<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:contentDescription=""
        tools:ignore="ContentDescription" />
    <!-- android:background="@drawable/club_nyc"-->


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="top"
    android:textAlignment="center"
    >
    <TextView
        android:id="@+id/AppTitle"
        android:text="@string/nightlifeTextTitle"
        android:textAlignment="center"
        android:textSize="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <Button
            android:id="@+id/buttonBusiness"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/ButtonBusiness"
            tools:ignore="ButtonStyle"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"

            />

        <Button
            android:id="@+id/buttonClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/ButtonClient"
            tools:ignore="ButtonStyle,HardcodedText"
            android:contentDescription="photo "
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"


            android:layout_alignParentTop="true" />
</RelativeLayout>
    </LinearLayout>

</FrameLayout>