<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context="com.example.admin.mon1ernightlife.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="525dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/bckgrnd_login"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        <TextView

            android:id="@+id/TextViewFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameSignUp"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:textColor="@color/colorBlack"/>
        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/colorBlack"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/edit_bckgrnd_login"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColor="@color/colorBlack"/>
        <TextView

            android:id="@+id/textViewLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:textColor="@color/colorBlack"/>
        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/colorBlack"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/edit_bckgrnd_login"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColor="@color/colorBlack"/>
        />
        <TextView

            android:id="@+id/textViewCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:textColor="@color/colorBlack"/>
        <EditText
            android:id="@+id/editTextCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/colorBlack"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/edit_bckgrnd_login"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/colorBlack"/>
        />
        <TextView

            android:id="@+id/textViewCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:textColor="@color/colorBlack"/>
        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/edit_bckgrnd_login"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/colorBlack"/>
        />
        <TextView

            android:id="@+id/textViewEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:textColor="@color/colorBlack"/>
        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/colorBlack"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/edit_bckgrnd_login"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/colorBlack"/>
        />
        <TextView

            android:id="@+id/textViewNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:textColor="@color/colorBlack"/>
        <EditText
            android:id="@+id/editNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/colorBlack"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/edit_bckgrnd_login"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/colorBlack"/>
        />
        <TextView

            android:id="@+id/textViewPasswordConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:textColor="@color/colorBlack"/>
        <EditText
            android:id="@+id/editTextPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/colorBlack"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/edit_bckgrnd_login"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/colorBlack"/>
        />
        </LinearLayout>

    <Button
        android:id="@+id/buttonConfirmSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/confirm"
        android:background="@drawable/edit_bckgrnd_login"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack"/>
</LinearLayout>
